--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
 	"client_id": "tf2kbvxsjvy19m0m53oxupk6w6aelv",
 	"nick": "pinasu",
 	"client_secret": "su0xa7amlq6rss7r9b7422n9tengdh",
-	"bot_name": "botana__"
+	"bot_name": "botana__",
+	"display_username": "BotAna__"
 }
